[package]
name = "cairo"
description = "A single-threaded 3D software pipeline for rendering on the CPU."
version = "0.1.0"
authors = ["Michael Zalla <michael@zalla.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug_print_feature = []

[dependencies]
bytemuck = "*"
libmath = "0.2.1"
# rand = "*"

[dependencies.rand]
version = "0.8.5"
# default-features = false
# features = ["gfx","image"]

[dependencies.sdl2]
version = "0.35.2"
default-features = false
# features = ["gfx","image"]

# [profile.dev]
# opt-level = 0

# [profile.release]
# opt-level = 3

# [lib.vec2]
# path = "src/lib/vec2"

[[bin]]
name = "Cairo"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
