[package]
name = "cairo"
description = "A single-threaded 3D software pipeline for rendering on the CPU."
version = "0.1.0"
authors = ["Michael Zalla <michael@zalla.io>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug_print_feature = []
dead_code = []

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["ttf","unsafe_textures", "image"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
