[package]
name = "cairo"
description = "A single-threaded 3D software pipeline for rendering on the CPU."
version = "0.1.0"
authors = ["Michael Zalla <michael@zalla.io>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
print_init_info = []
print_timing_info = []
print_ui_layout_info = []
print_warnings = []
debug_cycle_counts = []

[dependencies]
bitmask = "0.5.0"
json = "0.12.4"
num-format = "0.4.4"
rand = "0.8.5"
rand_distr = "0.4.3"
serde_derive = "1.0.197"
serde_json = "1.0.115"
serde_tuple = "0.5.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dependencies.serde]
    version = "1.0.197"
    features = ["serde_derive", "rc"]

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["ttf","unsafe_textures", "image"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dev-dependencies]
arrayvec = "0.7.6"
physical_constants = "0.5.0"
current_platform = "0.2.0"
